Added a p element that explains the scenario in absence of audio file.

--- a/public/index.html
+++ b/public/index.html
@@ -99,5 +99,6 @@
   <div id="main">
     <h1>Rosy meets Peter</h1>
     <a id="playStory" href="javascript:void(0)" title="Starts playing the dialogs in the story">Yes, I am eager. Let's begin!</a>
+    <p>This demo assumes a audio file that plays a dialog between 2 characters "Peter" and "Rosy" where Rosy wants to learn computer from Peter who has already learnt quite a lot. In the audio Peter takes Rosy to stores to buy stuff. Then comes back and begins. He asks her what does she understand by computer. While she is giving a thought, he gets back to the end user to get his feedback in.</p>
   </div>
 </body>
